// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get current month days and events 1`] = `
Object {
  "date": 2018-08-31T23:00:00.000Z,
  "day": 1,
  "events": null,
  "name": "Sunday",
  "selected": false,
  "today": false,
  "weekend": true,
}
`;

exports[`should get full month with prev offset days and next offset days 1`] = `
Array [
  Object {
    "date": 2018-08-26T23:00:00.000Z,
    "day": 27,
    "events": Array [],
    "name": "Tuesday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-08-27T23:00:00.000Z,
    "day": 28,
    "events": Array [],
    "name": "Wednesday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-08-28T23:00:00.000Z,
    "day": 29,
    "events": Array [],
    "name": "Thursday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-08-29T23:00:00.000Z,
    "day": 30,
    "events": Array [],
    "name": "Friday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-08-30T23:00:00.000Z,
    "day": 31,
    "events": Array [],
    "name": "Saturday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-09-30T23:00:00.000Z,
    "day": 1,
    "events": Array [],
    "name": "Tuesday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-10-01T23:00:00.000Z,
    "day": 2,
    "events": Array [],
    "name": "Wednesday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-10-02T23:00:00.000Z,
    "day": 3,
    "events": Array [],
    "name": "Thursday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-10-03T23:00:00.000Z,
    "day": 4,
    "events": Array [],
    "name": "Friday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-10-04T23:00:00.000Z,
    "day": 5,
    "events": Array [],
    "name": "Saturday",
    "offset": true,
    "weekend": false,
  },
  Object {
    "date": 2018-10-05T23:00:00.000Z,
    "day": 6,
    "events": Array [],
    "name": "Sunday",
    "offset": true,
    "weekend": true,
  },
]
`;

exports[`should get next month first weeks offset days 1`] = `
Object {
  "date": 2018-09-30T23:00:00.000Z,
  "day": 1,
  "events": null,
  "name": "Tuesday",
  "offset": true,
  "weekend": false,
}
`;

exports[`should get previews month last weeks offset days 1`] = `
Object {
  "date": 2018-08-26T23:00:00.000Z,
  "day": 27,
  "events": null,
  "name": "Tuesday",
  "offset": true,
  "weekend": false,
}
`;
